--- a/fetch-and-deploy.yml
+++ b/fetch-and-deploy.yml
@@ -1,30 +1,30 @@
 name: Fetch Stock Data and Deploy
 
 on:
-  push:
-    branches: [ main ]
-  schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+    push:
+        branches: [main]
+    schedule:
+        - cron: "0 0 * * *" # Runs daily at midnight UTC
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
+    build-and-deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
 
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+            - name: Use Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: "14"
 
-    - name: Install dependencies
-      run: npm install
+            - name: Install dependencies
+              run: npm install
 
-    - name: Fetch stock data
-      run: node stock-data-fetcher.js
+            - name: Fetch stock data
+              run: node stock-data-fetcher.js
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: .
+            - name: Deploy to GitHub Pages
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: .
