--- a/fetch-and-deploy.yml
+++ b/fetch-and-deploy.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches: [main]
     schedule:
-        - cron: "0 0 * * *" # Runs daily at midnight UTC
+        - cron: "0 */8 * * *" # Runs daily at midnight UTC
 
 jobs:
     build-and-deploy:
@@ -21,7 +21,7 @@ jobs:
               run: npm install
 
             - name: Fetch stock data
-              run: node stock-data-fetcher.js
+              run: node stock-data-fetcher.mjs
 
             - name: Deploy to GitHub Pages
               uses: peaceiris/actions-gh-pages@v3
