Make sure data is published to right branch.

--- a/.github/workflows/fetch-and-deploy.yml
+++ b/.github/workflows/fetch-and-deploy.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches: [main]
     schedule:
-        - cron: "0 */8 * * *" # Runs daily at midnight UTC
+        - cron: "0 */8 * * *" # Runs every 8 hours
 
 jobs:
     build-and-deploy:
@@ -28,3 +28,5 @@ jobs:
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_dir: .
+                  publish_branch: gh-pages
+                  force_orphan: true
