Push to gh-pages

--- a/.github/workflows/fetch-and-deploy.yml
+++ b/.github/workflows/fetch-and-deploy.yml
@@ -2,7 +2,7 @@ name: Fetch Stock Data and Deploy
 
 on:
     push:
-        branches: [main]
+        branches: [gh-pages]
     schedule:
         - cron: "0 */8 * * *" # Runs every 8 hours
 
