update yml versions.

--- a/.github/workflows/fetch-and-deploy.yml
+++ b/.github/workflows/fetch-and-deploy.yml
@@ -2,7 +2,7 @@ name: Fetch Stock Data and Deploy
 
 on:
     push:
-        branches: [gh-pages]
+        branches: [main]
     schedule:
         - cron: "0 */8 * * *" # Runs every 8 hours
 
@@ -10,12 +10,12 @@ jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4
 
             - name: Use Node.js
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v4
               with:
-                  node-version: "14"
+                  node-version: "20"
 
             - name: Install dependencies
               run: npm install
